<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Overall App Strings -->
    <string name="app_name">Shelf Life</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="warning_message">ShelfLife provides suggestions for product expiration dates.  External conditions can affect the shelf life of products.  Please exercise caution on any questionable foods.  ShelfLife is not responsible for any sickness or injury that may result from the consumption of any foods.</string>
    
    <!-- Menu Strings -->
    <string name="menu_ab_search">Search</string>
    <string name="menu_ab_scanner">Scanner</string>
    <string name="menu_ab_settings">Settings</string>
    
    <!-- State Strings -->
    <string name="state_shelf">Shelf</string>
    <string name="state_fridge">Fridge</string>
    <string name="state_freezer">Freezer</string>
    <string name="select_a_state">Select a state</string>    
    
    <!--  My Food Strings -->
    <string name="myfood_title">My Food</string>
    <string name="myfood_purchased">Purchased: </string>
    <string name="myfood_opened">Opened: </string>
    <string name="myfood_location">Location: </string>
    <string name="myfood_quantity">Quantity: </string>
    <string name="myfood_days">days</string>
    <string name="myfood_tips">Tips</string>
    <string name="myfood_notes">Notes</string>
    <string name="myfood_notes_hint">Add some notes.</string>
    <string name="myfood_tips_none">None.</string>
    <string name="myfood_picture">Picture of My Food</string>
    
    <!--  Food Strings -->
    <string name="food_title">Food</string>
    <string name="food_average_life">Average Life</string>
    <string name="food_add_button">Add</string>
    <string name="food_tips_title">Tips</string>
    <string name="food_tips_none">None.</string>
    <string name="food_picture">Picture of Food</string>
    
    <!-- Preferences Strings -->
    <string name="KEY_NOTIF_ENABLED">notif_enabled</string>
    <string name="KEY_NOTIF_RATE">notif_rate</string>
    <string name="PREF_CAT_NOTIFY_ENABLE">Enable Notifications</string>
    <string name="PREF_CAT_NOTIFY_OPTIONS">Notify Options</string>
    <string name="PREF_CB_NOTIFY_ENABLE_TITLE">Notifications</string>
    <string name="PREF_CB_NOTIFY_ENABLE_SUM">Enable notifications</string>
    <string name="PREF_LIST_NOTIFY_RATE_TITLE">Notify...</string>
    <string name="PREF_LIST_NOTIFY_RATE_SUM">Select when you want to be notified</string>
    <string-array name="pref_notif_options">
    	<item>On expiration</item>
    	<item>1 day before expiration</item>
    	<item>7 days before expiration</item>
    </string-array>
    <string-array name="pref_notif_options_values">
    	<item>0</item>
     	<item>1</item>
     	<item>7</item>
    </string-array>
    <string name="warning_title">WARNING!</string>
    <string name="warning_content_description">Warning Image Cannot Be Displayed</string>
    <string name="warning_agree">I Agree</string>
    <string name="warning_disagree">I Disagree</string>
    <string name="list_header_title">Title</string>
    <string name="list_header_subtitle">Subtitle</string>
    <string name="list_header_image_desc">Image Cannot be Displayed</string>
    <string name="myfood_listitem_days">2 days</string>
    <string name="myfood_listitem_image_desc">Image Cannot be Displayed</string>
    <string name="myfood_listitem_icon_desc">Icon Cannot be Displayed</string>
    <string name="table_location">Location</string>
    <string name="table_opened">Opened</string>
    <string name="table_unopened">Unopened</string>
    <string name="table_shelf">Shelf</string>
    <string name="table_fridge">Fridge</string>
    <string name="table_freezer">Freezer</string>
    <string name="table_null">-</string>
    <string name="edit_name">Name: </string>
    <string name="edit_name_hint">Food Name</string>
    <string name="edit_purchase_date">Date Purchased: </string>
    <string name="edit_opened_date">Date Opened: </string>
    <string name="edit_purchase_button">Set Purchase Date</string>
    <string name="edit_opened_button">Set Open Date</string>
    <string name="edit_opened_question">Has this food been opened?</string>
    <string name="edit_opened_yes">Yes</string>
    <string name="edit_opened_no">No</string>
    <string name="edit_state">State: </string>
    <string name="edit_quantity">Quantity: </string>
    <string name="edit_notes">Notes: </string>
    <string name="edit_notes_hint">Add some notes.</string>
    <string name="edit_quantity_hint">How many?</string>
    <string name="edit_picture">No Picture</string>
    <string name="barcode_text">Barcode Here</string>
    <string name="myfood_notes_none">None.</string>
    <string name="notification_title">Shelflife</string>
    <string name="notification_ticker">Foods Exipiring!</string>
    <string name="notification_text_0_days">You have food expiring today!</string>
    <string name="notification_text_1_days">You have food expiring in 1 day!</string>
    <string name="notification_text_7_days">You have food expiring in 7 days!</string>
    <string name="myfood_list_delete_all">Delete All</string>
    <string name="myfood_list_delete_expired">Delete Expired</string>

</resources>