<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:isScrollContainer="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    	<ImageView
    	    android:id="@+id/edit_picture"
    	    android:layout_width="100dp"
    	    android:layout_height="100dp"
    	    android:contentDescription="@string/edit_picture"
    	    />
    
	    <TextView android:id="@+id/edit_name_title_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_name"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
	    
	    <EditText
	        android:id="@+id/edit_name_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:hint="@string/edit_name_hint" />

	    <TextView android:id="@+id/edit_purchased_title_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_purchase_date"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
	        
	    <Button 
	        android:id="@+id/edit_purchase_button"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/edit_purchase_button"/>
	    
	    <TextView
	        android:id="@+id/purchase_date_label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
   		
   		<TextView android:id="@+id/edit_opened_question_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_opened_question"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
   		
   		<RadioGroup
   		    android:id="@+id/edit_opened_group"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <RadioButton android:id="@+id/edit_opened_true"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/edit_opened_yes"/>
		    <RadioButton android:id="@+id/edit_opened_false"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/edit_opened_no"/>
		</RadioGroup>
   		
		<TextView android:id="@+id/edit_opened_title_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_opened_date"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
		
		<Button 
	        android:id="@+id/edit_open_button"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/edit_opened_button"/>
	    
	    <TextView
	        android:id="@+id/open_date_label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
   
		<TextView android:id="@+id/edit_state_title_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_state"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
		<Spinner  
	        android:id="@+id/state_spinner"  
	        android:layout_height="wrap_content"  
	        android:prompt="@string/select_a_state"
	        android:layout_width="fill_parent"  
	        android:entries="@array/state_list" >  
    	</Spinner>  

		<TextView android:id="@+id/edit_quantity_title_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_quantity"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
		
		<EditText
		    android:id="@+id/edit_quantity_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:inputType="number"
		    android:hint="@string/edit_quantity_hint" />

	    <TextView android:id="@+id/edit_notes_title_text"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/edit_notes"
	       android:textStyle="bold"
	       android:textColor="#CCFFBB33"
	       />
	    
	    <EditText
	        android:id="@+id/edit_notes_text"
	        android:layout_height="wrap_content"
	        android:inputType="textMultiLine"  
    		android:lines="10"  
    		android:layout_width="fill_parent"
	        android:hint="@string/edit_notes_hint" />
   

</LinearLayout>
</ScrollView>