<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:scrollbars="none"
    android:isScrollContainer="true">

	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	   
	    <RelativeLayout
	        android:id="@+id/myfood_details_placemat"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="3"
	        android:background="@drawable/placemat_background"
	        android:layout_marginBottom="0dp"
	        >
	        <RelativeLayout
	            android:id="@+id/myfood_details_plate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dip"
	            android:layout_centerInParent="true"
	            android:background="@drawable/plate_icon_centered">
	       
	        	<ImageView
	    	   		android:id="@+id/myfood_details_plate_food"
	    	    	android:layout_width="wrap_content"
	    	    	android:layout_height="wrap_content"
	    	    	android:layout_centerInParent="true"
	    	    	android:contentDescription="@string/myfood_picture"
	    	    	/>
	            
	        </RelativeLayout>
	        
	    </RelativeLayout>
	    
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="7dp"
	        android:background="@color/placemat_divider"
	        />
	    
		<RelativeLayout android:id="@+id/myfood_details_data_layout"
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dp"
	    	android:layout_weight="7"
	    	android:layout_gravity="center"
	    	android:gravity="center"> 
	    	   
			<TextView android:id="@+id/myfood_name_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/ExpirationTable"
		        android:text="@string/myfood_title"
		        android:textSize="24sp"
		        android:textStyle="bold"
		        android:textColor="@color/myfood_title" 
		        />
			
			<TextView android:id="@+id/myfood_purchased_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_below="@+id/myfood_name_text"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:text="@string/myfood_purchased" 
		       />
			
			<TextView android:id="@+id/myfood_opened_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_below="@+id/myfood_purchased_text"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:text="@string/myfood_opened" 
		       />
			
			<TextView android:id="@+id/myfood_location_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_below="@+id/myfood_opened_text"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:text="@string/myfood_location" 
		       />
			
			<TextView android:id="@+id/myfood_quantity_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_below="@+id/myfood_location_text"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:text="@string/myfood_quantity"
		       />
			
			<RelativeLayout
			    android:id="@+id/myfood_days_left_num_layout"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignTop="@+id/myfood_name_text"
		        android:layout_alignRight="@+id/ExpirationTable"
		        >
			    
			    	<TextView android:id="@+id/myfood_days_left_num"
		       			android:layout_width="wrap_content"
		       			android:layout_height="wrap_content"
		       			android:layout_marginRight="0dp"
		       			android:layout_alignTop="@+id/myfood_name_text"
		       			android:layout_centerHorizontal="true"
					    android:textSize="50sp"
					    android:textStyle="bold"
					    android:textColor="@color/myfood_days_left"
					    android:layout_marginBottom="-15dip"
					    />
			
					<TextView android:id="@+id/myfood_days_left_text"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content"
				       android:layout_below="@+id/myfood_days_left_num"
				       android:layout_centerHorizontal="true"
				       android:text="@string/myfood_days"
				       android:textStyle="bold"
				       android:textColor="@color/myfood_days_left"
				       />
			    
			</RelativeLayout>
		    
		    <com.shelflifeapp.views.ExpirationTable
		        android:id="@+id/ExpirationTable"
			    android:layout_marginTop="10dp"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="25dip"
			    android:layout_marginRight="25dip"
			    android:layout_marginBottom="10dip"
				android:layout_centerHorizontal="true"
		        android:layout_below="@+id/myfood_quantity_text"
		        
		    />
		    
		    <TextView android:id="@+id/myfood_tips_title_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:layout_below="@+id/ExpirationTable"
		       android:text="@string/myfood_tips"
		       android:textStyle="bold"
		       android:textColor="@color/myfood_tips_title"
		       android:layout_marginTop="10dp"
		       />
		    
		    <TextView android:id="@+id/myfood_tips_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:layout_below="@+id/myfood_tips_title_text"
		       android:text="@string/myfood_tips_none"     
		       />
		    
		    <TextView android:id="@+id/myfood_notes_title_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:layout_below="@+id/myfood_tips_text"
		       android:text="@string/myfood_notes"
		       android:textStyle="bold"
		       android:textColor="@color/myfood_tips_title"
		       android:layout_marginTop="10dp"
		       />
		    
		    <EditText android:id="@+id/myfood_notes_text"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignLeft="@+id/ExpirationTable"
		       android:layout_alignRight="@+id/ExpirationTable"
		       android:layout_below="@+id/myfood_notes_title_text"
		       android:hint="@string/myfood_notes_hint" 
		       android:layout_marginBottom="10dp"     
		       />	
		       		
		</RelativeLayout>
		
	</LinearLayout>
	
</ScrollView>